--- a/.github/workflows/push-to-docker.yml
+++ b/.github/workflows/push-to-docker.yml
@@ -18,6 +18,8 @@ jobs:
         id: version
         uses: arago/semver-release-action@v1
         with:
+          bump: minor
+          prefix: v
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
         uses: docker/login-action@v1
