refactor(ci): change semver action

--- a/.github/workflows/push-to-docker.yml
+++ b/.github/workflows/push-to-docker.yml
@@ -16,11 +16,10 @@ jobs:
           fetch-depth: 0
       - name: Version
         id: version
-        uses: arago/semver-release-action@v1
+        uses: rickstaa/action-get-semver@v1
         with:
-          bump: minor
-          prefix: v
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          bump_level: minor
+          verbose: true
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -30,8 +29,10 @@ jobs:
         id: build_push
         uses: docker/build-push-action@v2
         with:
-          context: './socker/8.1'
+          context: "./socker/8.1"
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/laravel-example:v${{ steps.version.outputs.version }},${{ secrets.DOCKER_USERNAME }}/laravel-example:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/laravel-example:v${{ steps.version.outputs.current_version }},${{ secrets.DOCKER_USERNAME }}/laravel-example:latest
       - name: Metadata
-        run: echo "The result is:"; echo "${{ steps.build_push.outputs.metadata }}"
+        run: |
+          echo "The result is:"; echo "${{ steps.build_push.outputs.metadata }}"
+          echo "The next major version is ${{ steps.version.outputs.next_version }}"
