--- a/.github/workflows/push-to-docker.yml
+++ b/.github/workflows/push-to-docker.yml
@@ -23,15 +23,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         id: build_push
         uses: docker/build-push-action@v2
         with:
           context: "./socker/8.1"
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/laravel-example:v${{ steps.version.outputs.current_version }},${{ secrets.DOCKER_USERNAME }}/laravel-example:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:v${{ steps.version.outputs.current_version }},${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
       - name: Metadata
         run: |
           echo "The result is:"; echo "${{ steps.build_push.outputs.metadata }}"
