fix(ci): fix sail user and group

--- a/docker/8.1/Dockerfile
+++ b/docker/8.1/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:21.04
 
 LABEL maintainer="Taylor Otwell"
 
-ARG WWWGROUP
+ARG WWWGROUP=1000
+ARG WWWUSER=1000
 ARG NODE_VERSION=16
 
 WORKDIR /var/www/html
