--- a/docker/8.1/Dockerfile
+++ b/docker/8.1/Dockerfile
@@ -8,7 +8,7 @@ ARG NODE_VERSION=16
 
 WORKDIR /var/www/html
 
-COPY . /var/www/html/
+COPY ../../ /var/www/html/
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV TZ=UTC
