--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.2.0",
+    "version": "0.2.6-beta",
     "private": true,
     "scripts": {
         "dev": "npm run development",
