--- a/.github/workflows/push-to-docker.yml
+++ b/.github/workflows/push-to-docker.yml
@@ -29,7 +29,7 @@ jobs:
         id: build_push
         uses: docker/build-push-action@v2
         with:
-          context: "./docker/8.1"
+          context: "."
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:${{ steps.version.outputs.current_version }},${{ secrets.DOCKERHUB_USERNAME }}/laravel-example:latest
       - name: Metadata
